--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-pager-view": "^6.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0"
   },
